# PhyloFrame

./: .gitignore  DESCRIPTION  README.Rmd  README.md  Snakefile  run.R  run.sh  run_multi_study_validation.R  run_multi_study_validation.sh  run_network_annotation.R  run_network_annotation.sh  run_predict_batches.R  run_predict_batches.sh  run_single.R  run_single.sh  slurm_snakefile.sh
R/: batch_predictions.R  breast_validation_runs.R  create_batches.R  data.R  eaf_testing.R  gnomadV4_EAF_Calculation.R  load_large_data.R  multi_study_breast_validation.R  network_annotation.R  phyloFrame_driver.R  phyloFrame_helper_functions.R  regression_functions.R  scatter_plot.R  scatter_plot_single.R  set_up_dirs.R  single_expr_driver.R
config/: cluster_config.json  config.json
data/: all_val_expr.rda  all_vali_preds.rda  ancestry.rda  ancestry_breast.rda  ancestry_thyroid.rda  ancestry_uterine.rda  expression_breast.rda  expression_thyroid.rda  expression_uterine.rda  mega_validation_meta.rda  mega_validation_no_mixed.rda  multi_ancestry_predictions.rda  multi_study_breast_val_expr.rda  tcga_validation_training.rda  validation_expression.rda  validation_metadata.rda  validation_metadata_extended.rda  validation_sample_predictions.rda
data-raw/: preprocess_samples.R  preprocess_validation_samples.R
figure_scripts/: Admixture_Figure.R  African_Specific_Validation_Analysis.R  Cosmic_Gene_Heatmap.R  Model_Scatter_Plots.R  Network_EAFs.R  SIG_SIG_Correlation.R  (+5 more)
vcf_parsing/: CMakeLists.txt  LICENSE  THIRD-PARTY-LICENSES.txt  main.cpp
vcf_parsing/cmake/: FindHTSlib.cmake
(+89 files in other folders)
